# colors

./: CLAUDE.md  Cargo.toml  flake.nix
docs/: helix-scopes.md  lsp-semantic-tokens-ref.md
src/: backends.rs  chord.rs  helix.rs  main.rs  oklch.rs
src/helix/: emit.rs  mod.rs  node.rs  style.rs  theme.rs
