[package]
name = "colors"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.8", features = ["preserve_order"] }
palette = { version = "0.7", default-features = false, features = ["std"] }
nalgebra = "0.33"
anstyle = "1"
